[gd_scene load_steps=3 format=3 uid="uid://qky10v6nyhwg"]

[ext_resource type="Script" path="res://scripts/checklist_item.gd" id="1_61pob"]
[ext_resource type="Texture2D" uid="uid://btrg28t3x1vqc" path="res://icons/stardusk/icon_vertical_drag_24px.png" id="2_54taa"]

[node name="ChecklistItem" type="PanelContainer"]
offset_right = 256.0
offset_bottom = 35.0
script = ExtResource("1_61pob")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ItemDescription" type="TextEdit" parent="HBoxContainer" groups=["CLIItemDescription"]]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Item Description"
scroll_fit_content_height = true

[node name="CheckBox" type="CheckBox" parent="HBoxContainer" groups=["CLICheckBox"]]
layout_mode = 2
size_flags_vertical = 4

[node name="Drag" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_54taa")
stretch_mode = 3

[node name="Delete" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "X"

[connection signal="focus_exited" from="HBoxContainer/ItemDescription" to="." method="description_focus_exited"]
[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="delete_pressed"]
